Ажурирани задаци са четрнаестих вежби.

--- a/вежбе/вежбе14.md
+++ b/вежбе/вежбе14.md
@@ -1,478 +1,261 @@
 # Основи програмирања: вежбе - XIV недеља
 
+
 ## Задатак 1
-За дат почетак повезане листе, избрисати н-ти чвор са краја листе, и вратити нови почетак листе.
+За дат корен бинарног стабла написати функцију која враћа максималну дубину чвора
+која се може уочити у датом стаблу.
 
 <details markdown='block'>
-<summary>Решење - два пролаза кроз листу </summary>
+<summary>Решење  </summary>
 
 ```python
-# Дефиниција чвора листе.
-# class ListNode:
-#     def __init__(self, val=0, next=None):
+# Дефиниција чвора бинарног стабла.
+# class TreeNode:
+#     def __init__(self, val=0, left=None, right=None):
 #         self.val = val
-#         self.next = next
+#         self.left = left
+#         self.right = right
 
-def removeNthFromEnd(head,n):
+def maxDepth(root):
+        if not root:
+            return 0
+        return 1 + max(maxDepth(root.left),maxDepth(root.right))
 
-        # trazimo duzinu liste
-        curr = head
-        duzina = 0
-        while curr:
-            duzina+=1
-            curr = curr.next
+# Тест стабло:
+"""
+root = TreeNode(17)
+root.left = TreeNode(7)
+root.right = TreeNode(23)
+root.left.left = TreeNode(4)
+root.left.right = TreeNode(12)
+root.right.left = TreeNode(19)
+root.left.left.left = TreeNode(1)
 
-        # dolazimo do naseg cvora kojeg brisemo
-        # ali moramo da imamo i prethodni
-        # treba nam dummy, zato sto mozemo da obrisemo head
-
-        dummy = ListNode(0,head)
-        prev, curr = dummy, head
-
-        for i in range(duzina - n):
-            prev = curr
-            curr = curr.next
-
-        # 'brisemo' nas curr cvor
-
-        prev.next = curr.next
-        
-        return dummy.next
-
-```
-</details>
-
-<details markdown='block'>
-<summary>Решење - један пролаз кроз листу </summary>
-
-```python
-# Дефиниција чвора листе.
-# class ListNode:
-#     def __init__(self, val=0, next=None):
-#         self.val = val
-#         self.next = next
-
-def removeNthFromEnd(head,n):
-	fast = head
-        # pustamo fast da ima prednost za n mesta
-        for i in range(n):
-            fast = fast.next
-
-
-	# treba nam dummy jer mozemo da obrisemo
-        dummy = ListNode(val=0,next=head)
-        prev, curr= dummy, head
-
-        # sve dok fast ne dodje do kraja
-        # neka svi skacu za jedan
-        while fast:
-            prev = curr
-            curr = curr.next
-            fast = fast.next
-
-        # brisemo cvor
-        prev.next = curr.next
-
-        return dummy.next
+print(maxDepth(root))
+"""
 ```
 </details>
 
 ## Задатак 2
-За дата два почетка повезаних листи, вратити први њихов заједнички чвор.
-Уколико немају заједнички чвор, вратити None.
+За дат корен бинарног стабла написати функцију која враћа дужину његовог диjаметра. 
+
+Диjаметар бинарног стабла jе дужина наjдуже путање између два чвора у стаблу и 
+представљена је броjем ивица измећу њих.
 <details markdown='block'>
-<summary>Решење - O(N) меморија</summary>
+<summary>Решење  </summary>
 
 ```python
-# Definicija cvora liste.
-# class ListNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
+# Дефиниција чвора бинарног стабла.
+# class TreeNode:
+#     def __init__(self, val=0, left=None, right=None):
+#         self.val = val
+#         self.left = left
+#         self.right = right
 
-def getIntersectionNode(headA, headB):
-
-        # prolazimo kroz listu A i cuvamo sve cvorove u skup
-        skup_vidjenih = set()
-        while headA:
-            skup_vidjenih.add(headA)
-            headA = headA.next
-
-        # prolazimo kroz listu B i kada naidjemo na cvor koji je u skupu
-        # to je prvi zajednicki
-        while headB:
-            if headB in skup_vidjenih:
-                return headB
-            skup_vidjenih.add(headB)
-            headB = headB.next
-
-        return None
-```
-</details>
-
-<details markdown='block'>
-<summary>Решење - O(1) меморија</summary>
-
-```python
-# Дефиниција чвора листе.
-# class ListNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
-
-ddef getIntersectionNode(headA, headB):
-
-        # izracunaj duzinu liste A
-        lA, curr = 0, headA
-        while curr:
-            lA+=1
-            curr=curr.next
+def diameterOfBinaryTree(root):
+        res = [0]
         
-        # izracunaj duzinu iste B
-        lB, curr = 0, headB
-        while curr:
-            lB+=1
-            curr=curr.next
-        
-
-        # za duzi, head prebaci za razliku mesta
-        if lA > lB:
-            for i in range(lA-lB):
-                headA = headA.next
-                
-        if lA < lB:
-            for i in range(-(lA-lB)):
-                headB = headB.next
-        
-        # krecemo od novog heada, i starog heada
-        # skacemo za jedno mesto
-        # i kada su jednaki, tu se seku
-        while headA and headB:
-            if headA == headB:
-                return headA
-            headA = headA.next
-            headB = headB.next
+        def f(root):
+            if not root:
+                return -1
             
-        return None
+            left_height=f(root.left)
+            right_height=f(root.right)
+            
+            res[0] = max(res[0],2+left_height+right_height)
+            
+            return 1 + max(left_height,right_height)
+        
+        f(root)
+        return res[0]
+
+# Тест стабло:
+"""
+root = TreeNode(17)
+root.left = TreeNode(7)
+root.right = TreeNode(23)
+root.left.left = TreeNode(4)
+root.left.right = TreeNode(12)
+root.right.left = TreeNode(19)
+root.left.left.left = TreeNode(1)
+
+print(diameterOfBinaryTree(root))
+"""
 ```
 </details>
 
 ## Задатак 3
-За дат почетак повезане листе, вратити почетак изокренуте листе.
+За дат корен бинарног стабла написати функциjу коjа ће
+изокренути стабло и вратити његов корен.
 <details markdown='block'>
-<summary>Рекуризвно решење </summary>
+<summary>Решење  </summary>
 
 ```python
-# Дефиниција чвора листе.
-# class ListNode:
-#     def __init__(self, val=0, next=None):
+# Дефиниција чвора бинарног стабла.
+# class TreeNode:
+#     def __init__(self, val=0, left=None, right=None):
 #         self.val = val
-#         self.next = next
+#         self.left = left
+#         self.right = right
 
+def invertTree(root):
 
-def reverseList(head):
+        # base case
+        if not root:
+            return None
 
-        # osnovni slucaj
-        # kada lista ima nijedan ili jedan cvor
-        if head ==None or head.next == None:
-            return head
+        #zamenimo levo dete i desno dete
+        root.left, root.right = root.right, root.left
 
-        #sad sigurno znamo da nasa lista ima najmanje 2 cvora
-        newHead = head.next
-        if head.next:
-            # rekurzija
-            newHead = self.reverseList(head.next)
-            #promeni pokazivac
-            head.next.next = head
+        #pozovemo rekurziju za levo dete i desno dete
+        invertTree(root.left)
+        invertTree(root.right)
 
-        # sredimo nas prvi cvor da bude poslednji
-        head.next = None
+        return root
 
-        return newHead
-        
-```
-</details>
+# Тест стабло:
+"""
+root = TreeNode(17)
+root.left = TreeNode(7)
+root.right = TreeNode(23)
+root.left.left = TreeNode(4)
+root.left.right = TreeNode(12)
+root.right.left = TreeNode(19)
+root.left.left.left = TreeNode(1)
 
-<details markdown='block'>
-<summary>Итеративно решење </summary>
+new_root = invertTree(root)
 
-```python
-# Дефиниција чвора листе.
-# class ListNode:
-#     def __init__(self, val=0, next=None):
-#         self.val = val
-#         self.next = next
-
-
-def reverseList(head):
-        prev, curr = None, head
-        while curr:
-            # sacuvamo nase curr.next
-            tmp = curr.next
-
-            # promenimo pokazivac
-            curr.next = prev
-
-            # pomerimo prev i curr
-            prev = curr
-            curr = tmp
-
-        return prev
+print(new_root.val)
+print(new_root.left.val)
+print(new_root.right.val)
+print(new_root.left.right.val)
+print(new_root.right.left.val)
+print(new_root.right.right.val)
+"""
 ```
 </details>
 
 ## Задатак 4
-За дат почетак повезане листе, вратити true ако је листа палиндром у супротном вратити false.
+За дате корене *p* и *q* бинарних стабала написати функциjу коjа
+одређуjе да ли су стабла идентична или не. 
+
+Два бинарна стабла се сматраjу идентичним ако су структурално идентична и ако 
+њихови чворови имаjу исте вредности.
 <details markdown='block'>
-<summary>Решење </summary>
+<summary>Решење  </summary>
 
 ```python
-# Дефинисија чвора листе.
-# class ListNode:
-#     def __init__(self, val=0, next=None):
+# Дефиниција чвора бинарног стабла.
+# class TreeNode:
+#     def __init__(self, val=0, left=None, right=None):
 #         self.val = val
-#         self.next = next
+#         self.left = left
+#         self.right = right
 
-def isPalindrome(self, head):
+def isSameTree(p, q):
+	#kada oba korena ne postoje
+	if not p and not q:
+	    return True
+	    
+	#kada jedan ne postoji
+	if (not p and q) or (not q and p):
+	    return False
 
-        # nadjemo polovinu
-        slow,fast = head, head
-        while fast and fast.next:
-            slow = slow.next
-            fast = fast.next.next
-            
-        #od polovine do kraja izokrenemo
-        prev, curr = None, slow
-        while curr:
-            tmp = curr.next
-            curr.next = prev
-            prev = curr
-            curr = tmp
-            
-        # gledamo cvor po cvor od pocetka i kraja
-        # i uporedjujemo vrednosti
-        left, right = head, prev
-        while left and right:
-            if left.val != right.val:
-                return False
-            left = left.next
-            right = right.next        
-        return True
+	#oba postoje ali
+	#su im vrednosti razlicite
+	if p.val != q.val:
+	    return False
 
+	#oba postoje ali
+	#su im vrednosti iste
 
+	return isSameTree(p.left,q.left) and isSameTree(p.right,q.right)
+
+# Тест стабла:
+"""
+root = TreeNode(17)
+root.left = TreeNode(7)
+root.right = TreeNode(23)
+root.left.left = TreeNode(4)
+root.left.right = TreeNode(12)
+root.right.left = TreeNode(19)
+root.left.left.left = TreeNode(1)
+
+another_root = TreeNode(17)
+another_root.left = TreeNode(7)
+another_root.right = TreeNode(23)
+another_root.left.left = TreeNode(4)
+another_root.left.right = TreeNode(12)
+another_root.right.left = TreeNode(19)
+#another_root.left.left.left = TreeNode(1)    
+
+print(isSameTree(root, another_root))
+""" 
 ```
 </details>
 
 ## Задатак 5
-За дат почетак повезане листе, вратити чвор где креће петља. Уколико нема петље вратити None.
+За дате корене *root* и *subRoot* бинарних стабала, вратити *True* ако је
+*subRoot* корен подстабла у стаблу чији је корен *root*; у супротном вратити
+*False*.
 <details markdown='block'>
-<summary>Решење </summary>
+<summary>Решење  </summary>
 
 ```python
-# Дефинисија чвора листе.
-# class ListNode:
-#     def __init__(self, val=0, next=None):
+# Дефиниција чвора бинарног стабла.
+# class TreeNode:
+#     def __init__(self, val=0, left=None, right=None):
 #         self.val = val
-#         self.next = next
+#         self.left = left
+#         self.right = right
 
-def detectCycle(head):
-        slow, fast = head, head
+def isSubtree(root, subRoot):
+	def isSametree(p,q):
+		if (not p and q) or (not q and p):
+		    return False
+		if not p and not q:
+		    return True
+		if p.val != q.val:
+		    return False
+		
+		return isSametree(p.left,q.left) and isSametree(p.right,q.right)
+        if not subRoot:
+            return True
+        if not root:
+            return False
         
-        found_cycle = False
-        while fast and fast.next:
-            slow = slow.next
-            fast = fast.next.next
+        if isSametree(root,subRoot):
+            return True
             
-            if slow == fast:
-                found_cycle = True
-                break
-                
-        if not found_cycle:
-            return None
-        
-        while head and slow:
-            if head == slow:
-                return head
-            
-            head = head.next
-            slow = slow.next
+        return isSubtree(root.left,subRoot) or isSubtree(root.right,subRoot)
 
-```
-</details>
+# Тест стабла:
+"""
+root = TreeNode(17)
+root.left = TreeNode(7)
+root.right = TreeNode(23)
+root.left.left = TreeNode(4)
+root.left.right = TreeNode(12)
+root.right.left = TreeNode(19)
+root.left.left.left = TreeNode(1)
 
-## Операције над Бинарним стаблом претраживања
-<details markdown='block'>
-<summary>Претраживање </summary>
+another_root = TreeNode(7)
+another_root.left = TreeNode(4)
+another_root.right = TreeNode(12)
+#another_root.left.left = TreeNode(1)
 
-```python
-def search(root, k):
-	if root.key==k:
-		return root
-	elif k < root.key:
-		if root.left is None
-			return None
-		else:
-			return root.left.search(k)
-	else:
-		if root.right is None:
-			return None
-		else:
-			return root.right.search(k)
-
+print(isSubtree(root, another_root))
+"""       
 ```
 </details>
 
 
-<details markdown='block'>
-<summary>Минимум </summary>
 
-```python
-def min(root):
-	# idemo levo sve dok mozemo
-	current=root
-	while current.left is not None:
-		current=current.left
-	return current
 
-```
-</details>
 
-<details markdown='block'>
-<summary>Максимум </summary>
 
-```python
-def max(root):
-	# idemo desno sve dok mozemo
-	current=root
-	while current.right is not None:
-		current=current.right
-	return current
 
-```
-</details>
 
-<details markdown='block'>
-<summary>Наследник </summary>
-
-```python
-def naslednik(root):
-	#case 1: Ima desno dete, trazi se minimum na njemu
-	if root.right is not None:
-		return root.right.min()
-		
-	#case 2: Nema desno dete, moramo da idemo gore sve dok ne krenemo desno(dodjemo do levog deteta)
-	# idemo gore sve dok je on desno dete(njegov roditelj je manji od njega)
-	# ili dok nema roditelja, tada nemamo naslednika
-	# i vracamo roditelja, u prvom slucaju, vratice key, u drugom None
-	current=root
-	while current.parent is not None and current is current.parent.right:
-		current=current.parent
-	return current.parrent
-
-```
-</details>
-
-<details markdown='block'>
-<summary>Претходник </summary>
-
-```python
-def prethodnik(root):
-	#case 1: Ima levo dete, trazi se maksimum na njemu
-	if root.left is not None:
-		return root.left.max()
-		
-	#case 2: Nema levo dete, moramo da idemo gore sve dok ne krenemo levo(dodjemo do desnog deteta)
-	# idemo gore sve dok je on levo dete(njegov roditelj je veci od njega)
-	# ili dok nema roditelja, tada nemamo prethodnika
-	# i vracamo roditelja, u prvom slucaju, vratice key, u drugom None
-	current=root
-	while current.parent is not None and current is current.parent.left:
-		current=current.parent
-	return current.parrent
-
-```
-</details>
-
-<details markdown='block'>
-<summary>Додавање чвора </summary>
-
-```python
-def insert(root, node):
-	# Isto kao search, samo umesto return stavljamo node
-	if root.key == node.key:
-		return root
-	elif k < root.key:
-		if root.left is None
-			root.left=node
-			node.parent=root
-		else:
-			return root.left.insert(node)
-	else:
-		if root.right is None:
-			root.right=node
-			node.parent=root	
-		else:
-			return root.right.insert(node)
-
-```
-</details>
-
-<details markdown='block'>
-<summary>Брисање чвора </summary>
-
-```python
-def delete(root):
-	#case 1 nema dece, odgovarajuci left ili right parenta pokazuje na null
-	if root.left is None and root.right is None:
-		if root is root.parent.left:
-			root.parent.left=None
-		if root is root.parent.right:
-			root.parent.right=None
-		return root
-		
-	#case 2 ima jedno dete, menjamo pokazivace kako bi obrisali cvor
-	elif root.left is None:
-		if root is root.parent.left:
-			root.parent.left=root.right
-			root.parent.left.parent=root.parent
-		if root is root.parent.right:
-			root.parent.right=root.right
-			root.parent.right.parent=root.parent
-		return root
-	elif root.right is None:
-		if root is root.parent.left:
-			root.parent.left=root.left
-			root.parent.left.parent=root.parent
-		if root is root.parent.right:
-			root.parent.right=root.left
-			root.parent.right.parent=root.parent
-		return root
-		
-	#case 3 ima oba deteta, trazimo naslednika i menjamo keyeve cvoru i nasledniku i brisemo naslednika
-	else:
-		s=naslednik(root)
-		s.key,root.key=root.key,s.key
-		return delete(naslednik)
-
-```
-</details>
-
-<details markdown='block'>
-<summary>Inorder пролазак кроз стабло </summary>
-
-```python
-def inorder(root,array):
-     
-    # Base case
-    if not root:
-        return
-     
-    inorder(root.left,array)
-    array.append(root)
-    inorder(root.right,array)
-
-```
-</details>
 
 
 
