додати материјали из прве недеље сезоне 24/25, формулар за пријаву и решења старих испита

--- a/вежбе/вежбе01.md
+++ b/вежбе/вежбе01.md
@@ -1,6 +1,20 @@
 # Основи програмирања: вежбе - I недеља
 
 ## Задатак 1
+Написати функциjу која за два унета цела броја врши операције сабирања, одузимања, множења, целобројног дељења, као и остатка при целобројном дељењу.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+
+def operacije(broj_1,broj_2):
+    
+    return broj_1+broj_2,broj_1-broj_2,broj_1*broj_2,broj_1//broj_2,broj_1%broj_2
+```
+</details>
+
+
+## Задатак 2
 Написати функциjу коjој се као аргумент прослеђује величина угла у степенима, а чија је повратна вредност величина угла у радијанима.
 <details markdown='block'>
 <summary>Решење </summary>
@@ -15,7 +29,7 @@ def stepeni_u_radijane(ugao):
 ```
 </details>
 
-## Задатак 2
+## Задатак 3
 Написати функциjу коjа врши конверзију величине угла из степена у радијане, уз ограничење резултата на одређени број децимала.
 <details markdown='block'>
 <summary>Решење </summary>
@@ -35,7 +49,7 @@ def stepeni_u_radijane(ugao, broj_decimala):
 ```
 </details>
 
-## Задатак 3
+## Задатак 4
 Написати функцију која претвара време задато у минутима у време изражено у сатима и минутима.
 <details markdown='block'>
 <summary>Решење </summary>
@@ -49,7 +63,7 @@ def sati_i_minuti(minuti):
 ```
 </details>
 
-## Задатак 4
+## Задатак 5
 Написати функциjу коjа врши израчунавање обима круга на основу његове површине.
 <details markdown='block'>
 <summary>Решење </summary>
@@ -64,7 +78,27 @@ def obim_kruga(povrsina):
 ```
 </details>
 
-## Задатак 5
+## Задатак 6
+Написати функциjу коjа врши израчунавање Еуклидкског растојања између две тачке унутар исте равни.
+Користити следећу формулу:
+
+$d=\sqrt{(x_1-x_2)^2+(y_1-y_2)^2}$
+
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+from math import sqrt, pi
+
+def rastojanje(x1,x2,y1,y2): 
+    return sqrt((x1-x2)**2+(y1-y2)**2)
+```
+</details>
+
+
+
+
+## Задатак 7
 Написати функцију која израчунава површину једнакостраничног троугла на основу његовог обима.
 <details markdown='block'>
 <summary>Решење </summary>
@@ -80,7 +114,7 @@ def povrsina_jednakostranicnog_trougla(obim):
 ```
 </details>
 
-## Задатак 6
+## Задатак 8
 Написати функцију који враћа збир цифара четвороцифреног броја.
 <details markdown='block'>
 <summary>Решење </summary>
@@ -99,7 +133,7 @@ def zbir_cifara_cetvorocifrenog_broja(x):
 ```
 </details>
 
-## Задатак 7
+## Задатак 9
 Написати функцију која враћа аритметичку средину цифара четвороцифреног броја унетог путем стандардног улаза.
 <details markdown='block'>
 <summary>Решење </summary>
@@ -119,27 +153,8 @@ def aritmeticka_sredina():
 ```
 </details>
 
-## Задатак 8
-Написати функцију која враћа геометријску средину цифара четвороцифреног броја унетог путем стандардног улаза.
-<details markdown='block'>
-<summary>Решење </summary>
 
-```python
-def geometrijska_sredina():
-    print("Унеси четвороцифрени број:")
-    x = int(input())
-    
-    #Раздвајање цифара
-    h = x//1000 #цифра хиљада
-    s = (x//100)%10 #цифра стотина
-    d = (x//10)%10 #цифра десетица
-    j = x%10 #цифра јединица
-    
-    return (h*s*d*j)**(1/4)
-```
-</details>
-
-## Задатак 9
+## Задатак 10
 Написати функцију која враћа геометријску средину цифара четвороцифреног броја унетог путем стандардног улаза. Омогућити заокруживање резултата на произвољан број децимала.
 <details markdown='block'>
 <summary>Решење </summary>
