ажурирани материјали из друге наставне недеље

--- a/вежбе/вежбе02.md
+++ b/вежбе/вежбе02.md
@@ -1,28 +1,7 @@
 # Основи програмирања: вежбе - II недеља
 
+
 ## Задатак 1
-Написати функцију који враћа збир цифара троцифреног броја.
-<details markdown='block'>
-<summary>Решење</summary>
-
-```python
-def zbir_cifara_trocifrenog_broja(x):
-    cifra_jedinica = x % 10
-    cifra_desetica = (x//10) % 10
-    cifra_stotina = (x//100) % 10
-
-    zbir = cifra_jedinica + cifra_desetica + cifra_stotina
-
-    return zbir
-
-#while True:
-x = int(input())
-print(zbir_cifara_trocifrenog_broja(x))
-```
-
-</details>
-
-## Задатак 2
 Написати функцију којом се четвороцифрени број учитава са стандардног улаза, а која враћа збир његових цифара.
 <details markdown='block'>
 <summary>Решење - извлачење делова ниске индексирањем</summary>
@@ -41,21 +20,8 @@ def zbir_cifara():
 
 </details>
 
-## Задатак 3
-Написати функцију који исписује дужину дужи за унете кординате тачака.
-<details markdown='block'>
-<summary>Решење </summary>
 
-```python
-import math
-def duzina_duzi():
-    x1,y1,x2,y2 = map(int, input().split())
-    return math.sqrt( math.pow( x1-x2 , 2) + math.pow( y1-y2, 2))
-```
-
-</details>
-
-## Задатак 4
+## Задатак 2
 Написати функцију који враћа унети број, али са избаченом цифром стотина.
 <details markdown='block'>
 <summary>Решење - коришћење оператора </summary>
@@ -80,7 +46,7 @@ def izbaciti_cifru_stotina():
 ```
 </details>
 
-## Задатак 5
+## Задатак 3
 Написати програм који на стандардни излаз исписује број који се добија када се обрне редослед последње 4 цифре броја n.
 <details markdown='block'>
 <summary>Решење - коришћење оператора </summary>
@@ -112,7 +78,7 @@ def obrni_cifre():
 ```
 </details>
 
-## Задатак 6
+## Задатак 4
 Написати функцију која за унете дужине страница троугла проверава да ли такав троугао постоји.
 <details markdown='block'>
 <summary>Решење </summary>
@@ -129,8 +95,9 @@ def trougao():
 ```
 </details>
 
-## Задатак 7
+## Задатак 5
 Написати функцију која обавештава корисника о томе да ли је унети број паран или непаран.
+
 <details markdown='block'>
 <summary>Решење </summary>
     
@@ -147,7 +114,7 @@ def provera_parnosti():
 ```
 </details>
 
-## Задатак 8
+## Задатак 6
 Написати функцију која за за унето x проверава дељивост са 3.
 <details markdown='block'>
 <summary>Решење </summary>
@@ -167,7 +134,7 @@ deljivost(x)
 ```
 </details>
 
-## Задатак 9
+## Задатак 7
 Написати функцију која за за унети број проверава дељивост са 2 и са 3.
 <details markdown='block'>
 <summary>Решење </summary>
@@ -202,8 +169,34 @@ def provera_deljivosti(x):
 ```
 </details>
 
-## Задатак 10
-Написати програм који за унети целобројни број враћа збир његових цифара.
+
+
+## Задатак 8
+Написати програм који за унете целе бројеве n, m, и k израчунава насумичан број z из интервала [n,m] а који је дељив са k.
+
+
+<details markdown='block'>
+<summary>Решење </summary>
+    
+```python
+import random
+
+n, m, k = map(int,input().split())
+
+while True:
+    z = random.randint(n,m)
+    if z%k == 0:
+        print(z)
+        break
+``` 
+</details>
+
+
+
+
+
+## Задатак 9
+Написати програм који за унети целобројни број враћа збир његових цифара, користити *while* петљу.
 <details markdown='block'>
 <summary>Решење </summary>
     
@@ -223,7 +216,7 @@ print(zbir_cifara_celobrojnog_broja(n))
 ``` 
 </details>
 
-## Задатак 11
+## Задатак 10
 Написати програм који за унету ниску враћа ниску уназад.
 <details markdown='block'>
 <summary>Решење - извлачење делова ниске одсецањем </summary>
@@ -241,7 +234,7 @@ print(niska+"   -   "+niska_unazad(niska))
  ```
 </details>
 
-## Задатак 12
+## Задатак 11
 Написати функцију која проверава да ли је унета ниска палиндром.
 <details markdown='block'>
 <summary>Решење позивањем преходне функције niska_unazad </summary>
@@ -268,7 +261,7 @@ def palindrom(niska):
 ```
 </details>
 
-## Задатак 13
+## Задатак 12
 Написати функцију која реч "тачно" преводи у објекат True, реч "нетачно" у објекат False, док за сваки други унос обавештава корисника да такав унос није валидан.
 <details markdown='block'>
 <summary>Решење</summary>
@@ -287,7 +280,7 @@ def prevodilac():
 </details>
 
 
-## Задатак 14
+## Задатак 13
 Написати програм који исписује оцену на основу освојених поена.
 <details markdown='block'>
 <summary>Решење</summary>
@@ -315,7 +308,7 @@ print(ocena(x))
  ```
 </details>
 
-## Задатак 15
+## Задатак 14
 Написати функцију која израчунава квадрат задатог целог броjа понављањем сабирања.
 <details markdown='block'>
 <summary>Решење</summary>
@@ -335,7 +328,7 @@ def kvadrat(x):
  ```
 </details>
 
-## Задатак 16
+## Задатак 15
 Написати програм који рачуна факторијел унетог броја.
 <details markdown='block'>
 <summary>Решење</summary>
@@ -355,7 +348,7 @@ print(faktorijel(x))
  ```
 </details>
 
-## Задатак 17
+## Задатак 16
 Написати функцију која одређује најмању цифру која се користи при записивању произвољног целог броја, учитаног са стандардног улаза.
 <details markdown='block'>
 <summary>Решење</summary>
