Додато решење задатка понављајуће цифре

--- a/вежбе/вежбе04.md
+++ b/вежбе/вежбе04.md
@@ -183,7 +183,7 @@ rotacija(niz,k)
 </details>
 
 ## Задатак 10
-Петља група - Збирка задатака: задатак [(Ј) Спојлер](https://arena.petlja.org/competition/zbirka#tab_134951)
+Петља - Збирка задатака: задатак [(Ј) Спојлер](https://arena.petlja.org/competition/zbirka#tab_134951)
 <details markdown='block'>
 <summary>Решење</summary>
 
@@ -200,6 +200,31 @@ if x < a and y == b:
 if x == a and y < b:
     print('drugi')
 
+```
+</details>
+
+## Задатак 11
+Петља - Збирка задатака: задатак [(O) Понављајуће цифре](https://arena.petlja.org/sr-Latn-RS/competition/zbirka#tab_134865)
+<details markdown='block'>
+<summary>Решење</summary>
+
+```python
+# Број са понављајућим цифрама (коришћен у даљем делу програма као ниска)
+broj=input()
+
+# Ниска која акумулира цифре
+s=''
+
+# Променљива која чува цифру до појављивања различите цифре у учитаној ниски
+temp=broj[0]
+s+=temp
+
+for cifra in broj:
+    if cifra!=temp:
+        temp=cifra
+        s+=cifra
+        
+print(s)
 ```
 </details>
 
