Исправљено решење задатка 8 са вежби 3

--- a/вежбе/вежбе03.md
+++ b/вежбе/вежбе03.md
@@ -185,7 +185,7 @@ def suglasnici():
     rec=input()
     brojac=0
     for slovo in rec:
-        if slovo not in ("a","e","i","o","u") and slovo.isupper():
+        if slovo not in ("A","E","I","O","U") and slovo.isupper():
             brojac+=1
     print(brojac)
 
