Исправљено решење задатка 2.

--- a/вежбе/вежбе10.md
+++ b/вежбе/вежбе10.md
@@ -27,7 +27,7 @@ from math import sqrt,ceil
 n=int(input())
 for i in range(2,n):
     for j in range(2,ceil(sqrt(i))+1):#i-1
-        if (i%j==0):
+        if i%j==0 and i!=2:
             break
         if j>=sqrt(i):#i-1
             print(i)
